[Bug 49629] - Part II of a fix for some build issues.  - All of the unit tests now pass in Eclipse, bar VersionTest (which is ok as it depends on a build system property).  - I reduced the number of endorsed jars in build.xml  - VersionTest now passes using maven and JDK 1.6.  - I had to do some hacking to get this to work. The pom now contains a dependency plugin, to copy the dependencies to the endorsed dir (target). It also has a jar plugin, to create jars for the source and test code, all in phase test-compile.  - I upgraded the Junit dependency to 4.8.1.
git-svn-id: https://svn.apache.org/repos/asf/xml/security/trunk@985553 13f79535-47bb-0310-9956-ffa450edef68